Added alot of stuff to the UI

--- a/src/assets/css/animate.css
+++ b/src/assets/css/animate.css
@@ -3606,7 +3606,7 @@
   -webkit-animation-duration: 500ms;
   animation-duration: 500ms;
 }
-.animated.extrafaster {
+.animated.extraFast {
   -webkit-animation-duration: 150ms;
   animation-duration: 150ms;
 }
