--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -9,6 +9,7 @@ body {
   position: absolute;
   overflow-x: scroll;
   padding-top: 40px;
+  padding-bottom: 50px;
 }
 .card {
   background: #044174;
